<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".HiringTicketActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Ticket"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/agency_fbb"
        android:letterSpacing="0.1"
        android:textColor="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:background="@drawable/hiringticketbg">

        <androidx.cardview.widget.CardView
            android:layout_width="325dp"
            android:layout_height="350dp"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#e6e6e6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:text="Vehicle Type:"
                        android:textColor="@color/main" />

                    <TextView
                        android:id="@+id/tvHireVehicleType"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_below="@id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:textColor="@color/main"
                        android:text="Travel days:"
                        />
                    <TextView
                        android:id="@+id/tvHireDays"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_below="@id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:textColor="@color/main"
                        android:text="Travel date:"
                        />
                    <TextView
                        android:id="@+id/tvHireDate"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll4"
                    android:layout_below="@id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="100dp"
                        android:textColor="@color/main"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:text="Contact info:"
                        />
                    <TextView
                        android:id="@+id/tvHireContact"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="6dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/cardview5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <Button
                android:id="@+id/btnConfirmHiring"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Continue >"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:background="@drawable/btnmain"
                android:shadowColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/cardview5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>