<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logoname"
        android:layout_marginTop="0dp"
        android:text="SahaYatri"
        android:textSize="40dp"
        android:fontFamily="@font/brodast"
        android:textColor="@color/purple_500"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/signinbackground"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/signupbg"
        android:layout_marginTop="0dp"
        android:text="Register here"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/agency_fbb"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rl"
        />


    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/signinbackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="username"
                android:textColorHint="@color/orange2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="type the name of the user."
                app:startIconDrawable="@drawable/ic_userr"
                app:startIconTint="@color/orange2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:letterSpacing="0.1"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Phone number"
                android:textColorHint="@color/orange2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="mobile number in service."
                app:startIconDrawable="@drawable/ic_phonenumber"
                app:startIconTint="@color/orange2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:letterSpacing="0.1"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="email"
                android:textColorHint="@color/orange2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="type your email address."
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/orange2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:letterSpacing="0.1"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l3"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="address"
                android:textColorHint="@color/orange2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="type your home address."
                app:startIconDrawable="@drawable/ic_home"
                app:startIconTint="@color/orange2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:letterSpacing="0.1"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l4"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Create password"
                android:textSize="15dp"
                android:textColorHint="@color/orange2"
                app:counterEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:endIconMode="password_toggle"
                app:helperText="Use strong password for better security"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/orange2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l5"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:counterEnabled="true"
                android:textSize="15dp"
                android:textColorHint="@color/orange2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:endIconMode="password_toggle"
                app:helperText="re-write the password"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/orange2"
                android:hint="confirm Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="6dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/rl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="REGISTER"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/btnmain"
            android:shadowColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cardview5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>